# AI-Consultant

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/db/: database.py
backend/db/models/: assessment.py
backend/models/: schemas.py
backend/orchestration/: analysis_engine.py  complexity_scorer.py  embedding_service.py  report_generator.py
backend/prompts/: analysis_prompt.py  report_prompt.py
backend/routers/: assessment.py
backend/services/: bedrock_client.py
backend/utils/: configure_logging.py  report_assembler.py
docs/: AI_Readiness_ZebFractal.pptx  Detailed_Architecture.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AssessmentForm.jsx  ChatWindow.jsx  FractalBackground.jsx  ImpactMatrix.jsx  OpportunityCard.jsx  PhasedRoadmap.jsx  ProcessingScreen.jsx  ResultsDashboard.jsx  ZebLogo.jsx
frontend/src/services/: api.js
